--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -4,6 +4,19 @@ html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+.click-button {
+    background-color: #000;
+    border: solid;
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
 h1:focus {
     outline: none;
 }
