--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -4,6 +4,7 @@
 <PageTitle>Index</PageTitle>
 
 <h1><span style="color:red">❤</span>我们的合照<span style="color:red">❤</span></h1>
+<h1>Test</h1>
 
 <img id="image" src=@src alt="Image" />
 <br />
