--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -4,7 +4,6 @@
 <PageTitle>Index</PageTitle>
 
 <h1><span style="color:red">❤</span>我们的合照<span style="color:red">❤</span></h1>
-<h1>Test</h1>
 
 <img id="image" src=@src alt="Image" />
 <br />
@@ -12,14 +11,14 @@
 
 
 @code {
-    private string src = "./images/IMG_2012.jpg";
+    private string src = "./images/IMG_2012.JPG";
     private void RandomImage()
     {
-        var images = new string[] { "IMG_2012.jpg", "IMG_2037.jpg", "IMG_2367.jpg",
-                                    "IMG_2371.jpg", "IMG_2420.jpg", "IMG_5426.jpg",
-                                    "IMG_5709.jpg", "IMG_5760.jpg", "IMG_5838.jpg",
-                                    "IMG_5879.jpg", "IMG_5917.jpg", "IMG_6064.jpg",
-                                    "IMG_6092.jpg", "IMG_6171.jpg"
+        var images = new string[] { "IMG_2012.JPG", "IMG_2037.JPG", "IMG_2367.JPG",
+                                    "IMG_2371.JPG", "IMG_2420.JPG", "IMG_5426.JPG",
+                                    "IMG_5709.JPG", "IMG_5760.JPG", "IMG_5838.JPG",
+                                    "IMG_5879.JPG", "IMG_5917.JPG", "IMG_6064.JPG",
+                                    "IMG_6092.JPG", "IMG_6171.JPG"
 
                                     };
         var random = new Random();
