Enlarge image when clicked

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -29,17 +29,19 @@
     private List<Image> images = new List<Image>
     {
         new Image { ImageSource = "IMG_2012.JPG", Description = "Bukit Tinggi French Village" },
-        new Image { ImageSource = "IMG_2037.JPG", Description = "Bukit Tinggi Japanese Garden " },
-        new Image { ImageSource = "IMG_6171.JPG", Description = "On a bridge in Amsterdam overlooking the canal" },
+        new Image { ImageSource = "IMG_2037.JPG", Description = "Bukit Tinggi Japanese Garden" },
+        new Image { ImageSource = "IMG_2367.JPG", Description = "Tempurung Cave in Gopeng" },
         new Image { ImageSource = "IMG_2371.JPG", Description = "Atop of Kellie's Castle in Batu Gajah" },
         new Image { ImageSource = "IMG_2420.JPG", Description = "Cycling at Taiping Lake Gardens" },
         new Image { ImageSource = "IMG_5426.JPG", Description = "Art gallery inside Aarhus Aros" },
         new Image { ImageSource = "IMG_6092.JPG", Description = "Paris Disneyland" },
+        new Image { ImageSource = "IMG_5709.JPG", Description = "Frauenkirche in Munich Old Town" },
         new Image { ImageSource = "IMG_5760.JPG", Description = "Residenz Museum Munich" },
         new Image { ImageSource = "IMG_5838.JPG", Description = "Linderhof Palace in Bavaria" },
         new Image { ImageSource = "IMG_5879.JPG", Description = "At Neuschwanstein Castle balcony overlooking the mountain" },
         new Image { ImageSource = "IMG_5917.JPG", Description = "Eiffel Tower night scene" },
         new Image { ImageSource = "IMG_6064.JPG", Description = "Atop of Arc de Triomphe overlooking Paris" },
+        new Image { ImageSource = "IMG_6171.JPG", Description = "On a bridge in Amsterdam overlooking the canal" },
     };
     private bool isDescriptionVisible = false;
     private string descriptionText = string.Empty;
