Added image, new background color, removed default UI

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>我们的合照</PageTitle>
 
-<h1><span style="color:red">❤</span>我们的合照<span style="color:red">❤</span></h1>
+<h1 id="index-header"><span style="color:red">❤</span>我们的合照<span style="color:red">❤</span></h1>
 <br />
 <div class="image-container">
     @foreach (var image in images)
@@ -40,6 +40,7 @@
         new Image { ImageSource = "IMG_5838.JPG", Description = "Linderhof Palace in Bavaria" },
         new Image { ImageSource = "IMG_5879.JPG", Description = "At Neuschwanstein Castle balcony overlooking the mountain" },
         new Image { ImageSource = "IMG_5917.JPG", Description = "Eiffel Tower night scene" },
+        new Image { ImageSource = "IMG_5980.JPG", Description = "Louvre glass pyramid at night" },
         new Image { ImageSource = "IMG_6064.JPG", Description = "Atop of Arc de Triomphe overlooking Paris" },
         new Image { ImageSource = "IMG_6171.JPG", Description = "On a bridge in Amsterdam overlooking the canal" },
     };
