--- a/wwwroot/css/custom.css
+++ b/wwwroot/css/custom.css
@@ -23,17 +23,12 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    margin: 20px 0;
 }
 
 .image-container img {
-    width: 300px;
-    height: 200px;
-    object-fit: cover;
+    width: 100px;
+    height: auto;
     margin: 10px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
 }
 
 .description-container {
@@ -54,4 +49,10 @@ body {
     transform: scale(1.5);
     width: 300px;
     height: auto;
+}
+
+@media only screen and (min-width: 600px) {
+    .image-container img {
+        width: 200px;
+    }
 }
