--- a/wwwroot/css/custom.css
+++ b/wwwroot/css/custom.css
@@ -34,7 +34,8 @@ body {
 .description-container {
     display: none;
     width: 80%;
-    margin: 20px auto;
+    margin-top: 80px;
+    margin: 50px auto;
     text-align: center;
 }
 
