Changed background to pink

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,8 +1,8 @@
 ﻿@page "/"
 
-<PageTitle>我们的合照</PageTitle>
+<PageTitle>Our Memories</PageTitle>
 
-<h1 id="index-header"><span style="color:red">❤</span>我们的合照<span style="color:red">❤</span></h1>
+<h1 id="index-header"><span style="color:red">❤</span>Our Memories<span style="color:red">❤</span></h1>
 <br />
 <div class="image-container">
     @foreach (var image in images)
