--- a/wwwroot/css/custom.css
+++ b/wwwroot/css/custom.css
@@ -3,7 +3,16 @@
 }
 
 body {
-    background: linear-gradient(to right, #FFF7E6, #FFE5B4, #FFB347, #FFA07A, #FF8C66, #FF6600);
+    background: linear-gradient(to right, #FFF0F5, #FFC1E3, #FFB6C1, #FF69B4, #FFB6C1, #FFC1E3);
+}
+
+.description-container {
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+    max-width: 500px;
+    margin: 40px auto;
 }
 
 #click-button {
@@ -34,8 +43,7 @@ body {
 .description-container {
     display: none;
     width: 80%;
-    margin-top: 80px;
-    margin: 50px auto;
+    margin: 80px auto;
     text-align: center;
 }
 
