--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -17,6 +17,10 @@
     <p>@descriptionText</p>
 </div>
 
+<audio controls>
+    <source src="./audios/audio_ost.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
 
 @code {
     private class Image
