--- a/wwwroot/css/custom.css
+++ b/wwwroot/css/custom.css
@@ -65,3 +65,22 @@ body {
         width: 200px;
     }
 }
+
+audio {
+    width: 100%;
+    background-color: #ffc0cb;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px #ff69b4;
+}
+
+audio::-webkit-media-controls-panel {
+    background-color: #ffb6c1;
+    border-radius: 10px;
+}
+
+audio::-webkit-media-controls-play-button,
+audio::-webkit-media-controls-volume-slider,
+audio::-webkit-media-controls-mute-button {
+    color: #ff69b4;
+}
